--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -8,7 +8,7 @@ concurrency:
 jobs:
   build-main: 
      runs-on: ubuntu-latest
-     if: ${{ github.event.pull_request.merged == true && (github.event_name == 'pull_request' && github.ref == 'refs/heads/main') }}
+     if: ${{ github.event_name == 'pull_request' && github.ref == 'refs/heads/main' }}
      
      steps:
       - name: sample-run
