--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,6 +1,6 @@
 name: CD Omnamah..
 
-on: push
+on: pull_request
 
 concurrency:
   group: Deployments
@@ -8,7 +8,7 @@ concurrency:
 jobs:
   build-main: 
      runs-on: ubuntu-latest
-     if: ${{ github.event_name == 'pull_request' && github.ref == 'refs/heads/main' }}
+     if: ${{ github.event.pull_request.merged == true && (github.event_name == 'pull_request' && github.ref == 'refs/heads/main') }}
      
      steps:
       - name: sample-run
