--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,6 +1,6 @@
 name: CD Omnamah....
 
-on: pull_request
+on: push
 
 concurrency:
   group: Deployments
@@ -8,7 +8,7 @@ concurrency:
 jobs:
   build-main: 
      runs-on: ubuntu-latest
-     if: ${{ github.event.pull_request.merged == true && (github.event_name == 'pull_request' && github.ref == 'refs/heads/main') }}
+     if: ${{ github.ref == 'refs/heads/main' && (github.event_name == 'push' && startsWith(github.head_ref, 'develop')) }}
      
      steps:
       - name: sample-run
