--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,4 +1,4 @@
-name: CD Omnamah..
+name: CD Omnamah.
 
 on: push
 
@@ -8,7 +8,7 @@ concurrency:
 jobs:
   build-main: 
      runs-on: ubuntu-latest
-     if: ${{ github.ref == 'refs/heads/main' && (github.event_name == 'push' && startsWith(github.head_ref, 'develop')) }}
+     if: ${{ github.head_ref == 'develop' && (github.event_name == 'push' && startsWith(github.head_ref, 'develop')) }}
      
      steps:
       - name: sample-run
