--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -8,7 +8,7 @@ concurrency:
 jobs:
   build-main: 
      runs-on: ubuntu-latest
-     if: ${{ github.head_ref == 'develop' && (github.event_name == 'push' && startsWith(github.head_ref, 'develop')) }}
+     if: ${{ github.head_ref == 'develop' && github.event_name == 'push' }}
      
      steps:
       - name: sample-run
