--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -8,7 +8,7 @@ concurrency:
 jobs:
   build-main: 
      runs-on: ubuntu-latest
-     if: ${{ github.ref == 'main' && github.event_name == 'pull_request' }}
+     if: ${{ github.ref == 'refs/heads/main' && github.event_name == 'pull_request' }}
      
      steps:
       - name: sample-run
